@@ -4,16 +4,18 @@ import com.innowise.sharing.dto.CarDto;
 import com.innowise.sharing.dto.UserDto;
 import com.innowise.sharing.entity.Car;
 import com.innowise.sharing.entity.User;
+import com.innowise.sharing.kafka.producer.MessageProducer;
 import com.innowise.sharing.mapper.CarMapper;
 import com.innowise.sharing.repository.CarRepository;
 import com.innowise.sharing.service.CarService;
 import com.innowise.sharing.service.UserService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
 
 import javax.persistence.EntityNotFoundException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,6 +23,9 @@ public class CarServiceImpl implements CarService {
     private final CarRepository carRepository;
     private final UserService userService;
     private final CarMapper mapper;
+    @Autowired
+    @Qualifier("carMessageProducer")
+    private MessageProducer<Car> messageProducer;
 
     @Override
     public CarDto findCarDtoById(Long id) {
@@ -40,7 +45,7 @@ public class CarServiceImpl implements CarService {
         return carRepository.findAll()
                 .stream()
                 .map(this::setOwnerDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -48,7 +53,7 @@ public class CarServiceImpl implements CarService {
         return carRepository.selectAvailableCars()
                 .stream()
                 .map(this::setOwnerDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -65,6 +70,8 @@ public class CarServiceImpl implements CarService {
         User user = userService.getUserByEmail(email);
         car.setOwner(user);
         carRepository.save(car);
+
+        messageProducer.send(car);
     }
 
     @Override
